src/sass/layout/_modal.scss
.backdrop {
  position: fixed;
  height: 100vh;
  width: 100vw;
  background: rgba(0, 0, 0, 0.2);
  top: 0;
  transition: transform 250ms linear;
  z-index: 99;
  overflow: scroll;

  &.is-hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
  }
}

.btn-modal {
  font-weight: bold;
  font-size: 16px;
  line-height: 1.31;
  letter-spacing: 0.06em;
  background-color: #ecebeb;
  color: #d41443;
  border-radius: 22px;
  padding: 20px 37px 20px 37px;
  border: none;
  position: relative;
  left: 50%;
  top: 40px;
  transform: translate(-50%, -50%);
  fill: #c7133e;
  &:hover,
  &:focus {
    fill: #ecebeb;
  }

  @media screen and (min-width: 768px) {
    width: 240px;
    font-size: 20px;
  }
}

.btn-modal:hover,
.btn-modal:focus {
  background-color: #c7133e;
  color: #fff;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  fill: #ecebeb;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  overflow: scroll;
  width: 450px;
  height: 680px;
  max-width: 100%;
  max-height: 100%;
  padding: 40px;
  // padding-bottom: 0;

  background-color: #e17992;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
    0px 2px 1px rgba(0, 0, 0, 0.2);
  border-radius: 20px;
  background-image: url(../images/milk-mob-2.png);
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: 55% 100%;

  @media screen and (min-width: 1200px) {
    width: 528px;
  }
}

.modal-form-field {
  margin-bottom: 25px;
}

.modal-close {
  width: 30px;
  height: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: none;
  border: none;
  position: absolute;
  right: 10px;
  top: 10px;
}

.close-icon {
  fill: #ecebeb;
}

.close-icon:hover,
.close-icon:focus {
  fill: #c7133e;
}

.modal-title {
  margin-bottom: 20px;
  font-style: normal;
  font-weight: bold;
  font-size: 20px;
  text-align: center;
  display: block;
  color: #ecebeb;

  @media screen and (min-width: 768px) {
    font-size: 25px;
  }
}

.modal-form-lable {
  font-size: 17px;
  line-height: 14px;
  color: #ecebeb;
  margin-bottom: 15px;
  display: flex;
  justify-content: center;
  @media screen and (min-width: 768px) {
    font-size: 20px;
  }
}

.modal-form-input {
  width: 100%;
  height: 40px;
  left: 576px;
  top: 314px;
  border: 1px solid rgba(33, 33, 33, 0.2);
  box-sizing: border-box;
  border-radius: 17px;
  padding-left: 42px;
  color: #c7133e;
  &:focus,
  &:hover {
    border-color: #c7133e;
    outline: none;
  }
}

.input-wrap {
  display: block;
  position: relative;
  transition: border 250ms linear;
}

.modal-icon {
  position: absolute;
  left: 12px;
  top: 50%;
  transform: translateY(-50%);
  fill: #ecebeb;
  .modal-form-input:hover + &,
  .modal-form-input:focus + & {
    fill: #c7133e;
  }
}

.modal-comment {
  width: 100%;
  height: 120px;
  left: 576px;
  top: 314px;
  border: 1px solid rgba(33, 33, 33, 0.2);
  box-sizing: border-box;
  border-radius: 17px;
  padding-left: 16px;
  padding-top: 12px;
  resize: none;
  color: #c7133e;
  &:focus,
  &:hover {
    border-color: #c7133e;
    outline: none;
  }
  &::placeholder {
    font-size: 14px;
  }
}

.modal-form-link {
  color: #c7133e;
}

.check-lable {
  display: flex;
  align-items: center;
  margin-bottom: 15px;
  &::before {
    content: '';
    width: 16px;
    height: 15px;
    border: 2px solid #c7133e;
    border-radius: 2px;
    margin-right: 5px;
  }
}

.checkbox:checked + .check-lable::before {
  background: #c7133e;
  fill: #ecebeb;
  background-image: url(../images/Vector.svg);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}

// .ceckbox-text:after {
//   content: '';
//   width: 100%;
//   height: 20px;
//   background-image: url(../images/milk-mob-1.png);
//   background-repeat: no-repeat;
//   background-size: contain;
//   background-position: center;
// }

.modal-form-text {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

.ceckbox-text {
  font-size: 12px;
  line-height: 24px;
  letter-spacing: 0.03em;
  color: #ecebeb;

  @media screen and (min-width: 768px) {
    font-size: 17px;
  }
}

// .modal-img {
//   width: 100%;
//   // position: fixed;
//   bottom: 20px;
// }

.is-hidden {
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
}

.modal-btn-icon {
  margin-left: 10px;
}

.btn-modal-word {
  display: flex;
  align-items: center;
  justify-content: center;
}

